api-mulesoft/k8s/mule-deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${API_NAME}
  namespace: mulesoft
  labels:
    app: ${API_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${API_NAME}
  template:
    metadata:
      labels:
        app: ${API_NAME}
    spec:
      containers:
      - name: mule-runtime
        image: "${DOCKERHUB_USERNAME}/${API_NAME}:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        resources:
          limits:
            memory: "1.5Gi"
            cpu: "0.2"
          requests:
            memory: "700Mi"
            cpu: "0.1"
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8081
          initialDelaySeconds: 300
          periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: ${API_NAME}
  namespace: mulesoft
spec:
  selector:
    app: ${API_NAME}
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
